objects/Inbound_Email_Lead_Log__c.object
<CustomObject>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <label>Correlation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_From__c</fullName>
        <label>Email From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_External_Request_Id__c</fullName>
        <label>Lead External Request Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Inbound Email Lead Logs</relationshipLabel>
        <relationshipName>Inbound_Email_Lead_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raw_Body__c</fullName>
        <label>Raw Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Inbound Email Lead Log</label>
    <nameField>
        <displayFormat>IEL-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Email Lead Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>